# cppfun

./: .gitignore  README.md  a.out  assign_arbitrary_size.cpp  back_inserter.cpp  timeit.cpp
autohotkey/: capture_all_input.ahk  three_finger_swipe_windows.ahk
bash/: call_func.sh
c/: time_conversion.c
c#/: README.md  csharpfun.sln  omnisharp.json
cpp/: .gitignore  2dvector.cpp  CMakeLists.txt  Makefile  assign_arbitrary_size.cpp  auto_return_c++11.cpp  bool_vec_accumulate.cpp  const_example.cpp  constructor_interrupt.cpp  cout_as_arg.cpp  for_vs_transform.cpp  implicit_move.cpp  many_insertors.cpp  omp_parallel.cpp  perf_return_val_vs_uptr.cpp  return_unique_ptr_by_value.cpp  smartptr.cpp  sorts.cpp  static_assert_string_length.cpp  stdinvoke.cpp  stdref.cpp  stl_print.h  test_for_vs_transform.cpp  test_scope.cpp  timeit.cpp  timeit.h  two_semicol_namespace.cpp  uname_linux.cpp  unique_ptr_null_check.cpp  unpack_tuple.cpp
cpp/arrayfire/: CMakeLists.txt  README.md  main.cpp
powershell/: run_script_on_file_change.ps1
ps/: run_script_on_file_change.ps1
py/: buttons.py  callgrind.out.18423  cli_checks_performance.py  deterministic_random.py  docking_dockables.py  kiss.ys  lasso_selection.py  mantid_test.py  matplotlib_pyqt.py  methplotlib_rectangle.py  mypy_type.py  py_env_var.py  py_update_path.py  pyssh.py  python_import_speed_test.py  rectangle_selector.py  shared_array_alloc.py  utf8.py  vis_select.py
ruby/: arrays.rb  block_parameter.rb  calculate.rb  class.rb  class_init.rb  class_methods.rb  custom_to_s.rb  dicts.rb  fibonacci.rb  function.rb  ifs.rb  (+8 more)
(+42 files in other folders)
